# cams-manager

./: .gitignore  LICENSE  README.md  config.yaml.example  install.sh  pyproject.toml  test_config.py
src/cams_manager/: __init__.py  aggregator.py  cleaner.py  config.py  main.py  recorder.py
